Downgrade to Spring Boot 2.1.8.RELEASE / Java 8 for ERP compatibility
Adapt the reference implementation (Spring Boot 3.2.5 / Java 17) to the
target ERP stack:

- pom.xml: parent 3.2.5 -> 2.1.8.RELEASE, java.version 17 -> 1.8,
  mysql-connector-j -> mysql-connector-java
- jakarta.* -> javax.* (persistence + validation namespaces)
- Replace Java 9+ features for Java 8: record -> final class,
  switch expression -> classic switch, var -> explicit type,
  String.isBlank() -> trim().isEmpty(), URLDecoder Charset overload ->
  String overload
- Convert test from JUnit 5 to JUnit 4 (Boot 2.1.8 default)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>